--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "debug": "nodemon --inspect ./src/index.js"
   },
   "dependencies": {
     "bcrypt": "3.0.6",
@@ -15,7 +16,11 @@
     "dotenv": "7.0.0",
     "express": "4.16.4",
     "jsonwebtoken": "8.5.1",
-    "mongoose": "5.5.1"
+    "mongoose": "5.5.1",
+    "passport": "0.4.0",
+    "passport-github2": "0.1.11",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "morgan": "1.9.1",
