--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.5.1",
     "passport": "0.4.0",
+    "passport-facebook": "3.0.0",
     "passport-github2": "0.1.11",
+    "passport-google-oauth": "2.0.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0"
   },
