--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "nodemon --inspect ./src/index.js"
   },
   "dependencies": {
+    "async": "2.6.2",
     "bcrypt": "3.0.6",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
